--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.3",
     "framer-motion": "^11.2.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-scroll-parallax": "^3.4.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
